# PID-autotune

./: CMakeLists.txt  README.md
octave/: motor.m  octave-workspace
src/: Controller.hpp  DummyMotor.cpp  DummyMotor.hpp  Genetic.cpp  Genetic.hpp  GeneticSettingsWidget.cpp  GeneticSettingsWidget.hpp  GraphSettingsWidget.cpp  GraphSettingsWidget.hpp  MainWindow.cpp  MainWindow.hpp  Motor.cpp  Motor.hpp  OddSpinBox.hpp  PIDController.cpp  PIDController.hpp  PIDSettingWidget.cpp  PIDSettingWidget.hpp  pid-autotune.cpp
